# object-detector-image-webassembly

./: .devcontainer  .env.docker-sync  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker-sync-.yml  docker-sync.yml  make-symlink.sh  package.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  static.yml
client/src/: App.tsx  index.ts
example/: index.html
server/src/: App.tsx  Server.tsx  index.ts
src/client/: App.tsx
src/server/: App.tsx  index.ts
web-assembly/: CMakeLists.txt  a.out.js  build.sh  vCMakeLists.txt
web-assembly/src/: brisk-detector.cpp
webassembly/: CMakeLists.txt  _CMakeLists.txt  __build-wasm.sh  a.out.wasm  build-wasm.sh  build.sh
webassembly copy/: CMakeLists.txt  build-wasm.sh  build.sh
webassembly copy/src/: CUtils.ts  CWasm.ts
webassembly/cpp/: brisk-detector copy.cpp  brisk-detector.cpp
webassembly/src/: CEmscripten.ts  CUtils.ts  CZBarEmscripten.ts  brisk-detector.cpp  detector.d.ts  emscripten.ts  utils copy.ts  utils.ts  wa.ts
webassembly/src/brisk-detector/: brisk-detector.cpp
webassembly/src/helpers/: index.ts
